# alchemy-rs

./: .env.example  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  clippy.toml
.cargo-husky/hooks/: pre-commit
docs/: README.md
docs/api/: lib.md
docs/providers/: architecture.md  featherless.md  google.md  kimi.md  minimax.md  zai.md
examples/: api_lifecycle.rs  google_live_streaming.rs  google_live_tool_call.rs  test_openrouter.rs  test_tools.rs  tool_call_unified_types_smoke.rs  zai_glm_simple_chat.rs  zai_glm_tool_call_smoke.rs
examples/minimax/: basic.rs  tool_call.rs
memory-bank/research/: 2026-03-04_zai_minimax_interleaved_dry_handoff.md  2026-03-18_00-24-04_stream-model-dispatch-unsafe-cast.md
rules/: README.md  sgconfig.yml
rules/checks/: no-providers-import-in-types.yml  no-stream-import-in-providers.yml  no-stream-import-in-types.yml
scripts/: harness.sh  run_all_minimax.sh  run_minimax_inline_think.sh  run_minimax_reasoning_split.sh  run_minimax_usage_chunk.sh  run_tool_call_unified_types.sh
smokescripts/: run_all_google.sh  run_google_streaming.sh  run_google_tool_call.sh
src/: lib.rs
src/models/: featherless.rs  google.rs  kimi.rs  minimax.rs  mod.rs  zai.rs
src/providers/: anthropic.rs  env.rs  google.rs  kimi.rs  minimax.rs  mod.rs  openai_completions.rs  zai.rs
src/providers/shared/: anthropic_like.rs  mod.rs  openai_like_messages.rs  openai_like_runtime.rs  stream_blocks.rs
src/stream/: mod.rs
src/test_helpers/: mod.rs
src/types/: api.rs  event_stream.rs  mod.rs  model.rs  zai.rs
src/utils/: sanitize.rs
