[package]
name = "alchemy-llm"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
description = "Unified LLM API abstraction layer supporting 10+ providers through a consistent streaming interface"
license = "MIT"
readme = "README.md"
repository = "https://github.com/alchemiststudiosDOTai/alchemy-rs"
homepage = "https://github.com/alchemiststudiosDOTai/alchemy-rs"
documentation = "https://docs.rs/alchemy-llm"
keywords = ["llm", "ai", "openai", "anthropic", "streaming"]
categories = ["api-bindings", "asynchronous"]
exclude = [
    ".github/",
    ".cargo-husky/",
    "memory-bank/",
    "website/*",
    "docs/",
    "assets/",
    ".tickets/",
    "AGENTS.md",
    "CLAUDE.md",
    ".env*",
    "Makefile",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
schemars = "0.8"
jsonschema = "0.18"
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
async-trait = "0.1"
dirs = "5.0"
regex = "1.10"
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
serial_test = "3.2"

[[example]]
name = "minimax_basic"
path = "examples/minimax/basic.rs"

[[example]]
name = "minimax_tool_call"
path = "examples/minimax/tool_call.rs"
